--- a/src/containers/User/Login/Login.scss
+++ b/src/containers/User/Login/Login.scss
@@ -1,4 +1,4 @@
-.loginDesign{
+.loginDesign {
     height: 90vh;
     width: 100vw;
     background: radial-gradient(rgb(0, 225, 255), rgb(0, 221, 255));
@@ -19,7 +19,7 @@
         box-shadow: 0em 0em 0.4em 0.05em rgb(179, 172, 172);
     }
 
-    .loginButton{
+    .loginButton {
         height: 2.5em;
         width: 8em;
         background: radial-gradient(rgb(105, 192, 190), rgb(48, 158, 255));
@@ -28,11 +28,12 @@
         box-shadow: 0em 0em 0.4em 0.1em rgb(154, 152, 152);
         font-weight: bold;
     }
-   /*  .error{
-        height: 2em;
-        width: 10em;
-        background-color: rgb(135, 21, 21);
-        color: white;
-    } */
+
+    .error {
+        width: 20em;
+        font-weight: bold;
+        color: rgb(121, 242, 253);
+        font-size: x-large;
+    }
 
 }
