--- a/src/containers/User/Register/Register.scss
+++ b/src/containers/User/Register/Register.scss
@@ -1,4 +1,4 @@
-.Register{
+.Register {
     height: 90vh;
     width: 100vw;
     background-color: rgb(232, 131, 94);
@@ -8,24 +8,32 @@
     justify-content: center;
     align-items: center;
 
-    Form{
+    Form {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
     }
 
-    .label{
+    .label {
         width: 30em;
         background-color: rgb(170, 220, 221);
         border: 0.1em solid white;
         box-shadow: 0em 0em 0.4em 0.05em rgb(154, 152, 152);
     }
-    Button{
+
+    Button {
         background: radial-gradient(rgb(105, 192, 190), rgb(48, 158, 255));
         color: black;
         border: 0.1em solid white;
         box-shadow: 0em 0em 0.4em 0.1em rgb(154, 152, 152);
         font-weight: bold;
+    }
+
+    .msg {
+        width: 20em;
+        font-weight: bold;
+        color: rgb(253, 13, 0);
+        font-size: x-large;
     }
 }
