--- a/src/components/Filmcard/Filmcard.scss
+++ b/src/components/Filmcard/Filmcard.scss
@@ -1,9 +1,8 @@
 
-
 .Filmcard {
     padding: 1em;
     margin: 1em;
-    background-color:cadetblue;
+    background-color:rgb(78, 180, 198);
     border-radius: 1em;
     border: .1em solid black;
     box-shadow: 3px 3px 10px 1px;
