--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,67 @@
-.Nav {
+.Nav1 {
+  height: 6em;
+  width: 100%;
+  background: linear-gradient(rgb(11, 11, 231), rgb(19, 19, 141), rgb(0, 0, 255));
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  cursor: pointer;
+  border-top: 0.1em solid black;
+  border-bottom: 0.1em solid black;
+
+  .firstNav{
+    margin-left: 1em;
+  }
+
+  .active {
+
+    font-weight: bold;
+    font-size: x-large;
+    margin-right: 2em;
+    margin-bottom: 1em;
+    color: white;
+    transition: 0.5s;
+    text-decoration: none;
+    border: 0.5em;
+    border-radius: 0.2em;
+    background: radial-gradient(rgb(225, 63, 26), rgb(68, 14, 8));
+    padding: 0.3em;
+    box-shadow: 0em 0em 0.2em 0.05em white;
+
+  }
+
+  .active:hover {
+
+    color: grey;
+    transition: 0.5s;
+  }
+
+  .inactive {
+
+    font-weight: bold;
+    font-size: x-large;
+    margin-right: 2em;
+    margin-bottom: 1em;
+    color: white;
+    transition: 0.5s;
+    text-decoration: none;
+    border: 0.5em;
+    border-radius: 0.2em;
+    background: radial-gradient(rgb(77, 41, 140), rgb(32, 16, 103));
+    padding: 0.3em;
+    box-shadow: 0em 0em 0.2em 0.05em black;
+
+  }
+
+  .inactive:hover {
+
+    color: grey;
+    transition: 0.5s;
+  }
+}
+.Nav2 {
   height: 6em;
   width: 100%;
   background: linear-gradient(rgb(11, 11, 231), rgb(19, 19, 141), rgb(0, 0, 255));
