--- a/src/containers/Film/Film.scss
+++ b/src/containers/Film/Film.scss
@@ -7,4 +7,15 @@
     justify-content: center;
     max-width: 100% !important;
     margin: 0;
+
+}
+
+.container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.row{
+    min-height: 200px;
 }
