--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -86,16 +86,16 @@
   border: 0.27em solid rgba(162, 50, 37, 0.535);
 }
 
-.netflixContainer{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+// .netflixContainer{
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
 
-}
-.netflix{
-  height: 5em;
-  width: 7em;
-  border-radius: 0.5em;
-  border: 0.2em solid black;
-  box-shadow: 0em 0em 0.3em 0.05em white;
-}
+// }
+// .netflix{
+//   height: 5em;
+//   width: 7em;
+//   border-radius: 0.5em;
+//   border: 0.2em solid black;
+//   box-shadow: 0em 0em 0.3em 0.05em white;
+// }
